--- a/app/src/main/res/layout/menu_header_layout.xml
+++ b/app/src/main/res/layout/menu_header_layout.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/header_profile_name"
-        android:text="Entrar"
+        android:text="@string/enter"
         android:textColor="@android:color/white"
         android:textAppearance="@android:style/TextAppearance.Large"
         android:layout_marginLeft="16dp" />
