--- a/app/src/main/res/layout/activity_sport.xml
+++ b/app/src/main/res/layout/activity_sport.xml
@@ -23,6 +23,16 @@
         android:layout_width="match_parent"
         android:layout_height="600dp" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_adicionar_atividade"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="Nova Atividade"
+        style="@style/Widget.MaterialComponents.Button.UnelevatedButton" />
+
 
 
 </LinearLayout>
