--- a/app/src/main/res/layout/activity_sport.xml
+++ b/app/src/main/res/layout/activity_sport.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,7 +9,8 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/appbar">
 
         <include
             layout="@layout/menu_toolbar_layout"
@@ -18,17 +19,31 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_adicionar_atividade"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:text="Nova Atividade"
-        style="@style/Widget.MaterialComponents.Button.UnelevatedButton" />
+        android:orientation="vertical"
+        android:layout_below="@id/appbar">
+        <ListView
+            android:id="@+id/activity_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </ListView>
+    </LinearLayout>
 
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_add_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
-</LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+
+        android:layout_margin="16dp"
+        android:contentDescription="Adicionar Atividade"
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        tools:ignore="RtlHardcoded" />
+
+
+</RelativeLayout>
