Layout ranking -- Precisa melhorar

--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -19,7 +19,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <ListView
-        android:id="@+id/list"
+        android:id="teste"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:dividerHeight="1dp" />
